--- a/style.css
+++ b/style.css
@@ -5,9 +5,6 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-li {
-  list-style: none;
-}
 
 body a {
   text-decoration: none;
@@ -31,6 +28,10 @@ body a {
   border-radius: 2rem;
   margin-top: 0.5vw;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.navbar li {
+  list-style: none;
 }
 
 .navbar .links {
@@ -264,4 +265,179 @@ body a {
   margin-top: 1rem;
   margin-left: auto;
   margin-right: auto;
+}
+
+.gallery {
+  width: 100%;
+  margin-top: 4vh;
+}
+
+.gallery-container {
+  align-items: center;
+  display: flex;
+  height: 25vw;
+  margin: 0 auto;
+  max-width: 100vw;
+  position: relative;
+}
+
+.gallery-item {
+  height: 15vw;
+  opacity: 0;
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+  width: 33vw; 
+  z-index: 0;
+  border-radius: 1.5vw;
+  background-size: contain;
+  object-fit: cover;
+}
+
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 1.5vw;
+}
+
+.gallery-item-1 {
+  left: 15vw; 
+  opacity: 0.4;
+  transform: translateX(-50%);
+}
+
+.gallery-item-2, .gallery-item-4 {
+  height: 20vw;
+  opacity: 0.8;
+  width: 38vw;
+  z-index: 1;
+}
+
+.gallery-item-2 {
+  left: 30vw; 
+  transform: translateX(-50%);
+}
+
+.gallery-item-3 {
+  box-shadow: -2px 5px 33px 6px rgba(0, 0, 0, 0.35);
+  height: 25vw;
+  opacity: 1;
+  left: 50vw; 
+  transform: translateX(-50%);
+  width: 43vw;
+  z-index: 2;
+}
+
+.gallery-item-4 {
+  left: 70vw; 
+  transform: translateX(-50%);
+}
+
+.gallery-item-5 {
+  left: 85vw; 
+  opacity: 0.4;
+  transform: translateX(-50%);
+}
+
+.gallery-controls {
+  display: flex;
+  justify-content: center;
+  position: relative;
+}
+
+.gallery-controls button {
+  background-color: #2D2A71;
+  color: #ee6b23;
+  border: 0;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 2rem;
+  font-weight: 500;
+  margin: 3vh 5vw 0;
+  padding: 0;
+  width: 3rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: capitalize;
+  line-height: 1;
+  box-sizing: border-box;
+}
+
+.gallery-controls button:hover {
+  background-color: #ee6b23;
+  color: #2D2A71;
+}
+
+.gallery-controls-button:focus {
+  outline: none;
+}
+
+.gallery-nav {
+  bottom: -1.5vw;
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  position: absolute;
+  width: 100%;
+}
+
+.gallery-nav li {
+  background: #ccc;
+  border-radius: 50%;
+  height: 1vw;
+  margin: 0 1.6vw;
+  width: 1vw;
+}
+
+.gallery-nav li.gallery-item-selekted {
+  background: #555;
+}
+
+/* Section Features */
+.features {
+  margin-top: 6rem;
+  display: flex;
+  justify-content: center;
+}
+
+/* Section Features */
+.features {
+  margin-top: 6rem;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.slideFeat {
+  width: 100%; /* Ensure it spans the full width of the screen */
+  border: 0;
+  margin-top: 2rem; /* Space between feat and slideFeat */
+}
+
+.slideFeat .list {
+  display: flex;
+  width: 100%;
+  min-width: calc(var(--width) * var(--quantity));
+  position: relative;
+}
+
+.slideFeat .card {
+  width: var(--width);
+  height: 200px;
+  position: absolute;
+  left: 100%;
+  animation: autoRun 12s linear infinite;
+  animation-delay: calc((12s / var(--quantity)) * (var(--position) - 1));
+}
+
+@keyframes autoRun {
+  from {
+    left: 100%;
+  }
+  to {
+    left: calc(var(--width) * -1);
+  }
 }
